agregar menu usuarios por empresas y correccion descripcion conectar articulo

--- a/src/app/pages/projects/create/compliance/task/task.component.html
+++ b/src/app/pages/projects/create/compliance/task/task.component.html
@@ -146,6 +146,7 @@
         </div>
         <!-- end col -->
     </div>
+</div>
 
 <!-- Add ListJs Data -->
 <ng-template #content role="document" let-modal>
