ajustes estilos generales y usuarios

--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -112,6 +112,15 @@
                 </div>
               </li>
             </ng-container>
+
+            <!--Agregardo por JZ-->
+            <li class="nav-item">
+              <a class="side-nav-link-ref nav-link menu-link" style="cursor: pointer;" (click)="logout()">
+                <i class="bx icon nav-icon ri-logout-box-line"></i>
+                <span class=""> Salir</span>
+              </a>
+            </li>
+            <!-- Fin agregado por JZ-->
           </ul>
           </ngx-simplebar>
       </div>
