--- a/src/app/pages/extrapages/team/team.component.html
+++ b/src/app/pages/extrapages/team/team.component.html
@@ -27,7 +27,7 @@
                                     <div class="col" *ngFor="let data of Team | filter:term" id="t_{{data.id}}">
                                         <div class="card team-box">
                                             <div class="team-cover">
-                                                <img src="{{data.backgroundImg ? data.backgroundImg : 'assets/images/small/img-9.jpg'}}" alt="" class="img-fluid" />
+                                                <img src="{{data.backgroundImg ? data.backgroundImg : 'assets/images/logo_conect_ia.png'}}" alt="" class="img-fluid" />
                                             </div>
                                             <div class="card-body p-4">
                                                 <div class="row align-items-center team-row">
@@ -269,7 +269,7 @@
                                 <div class="px-1 pt-1">
                                     <div
                                         class="modal-team-cover position-relative mb-0 mt-n4 mx-n4 rounded-top overflow-hidden">
-                                        <img src="assets/images/small/img-9.jpg" alt="" id="cover-img"
+                                        <img src="assets/images/logo_conect_ia.png" alt="" id="cover-img"
                                             class="img-fluid">
 
                                         <div class="d-flex position-absolute start-0 end-0 top-0 p-3">
@@ -404,7 +404,7 @@
             <ng-template #viewContent let-offcanvas>
                 <div class="offcanvas-body profile-offcanvas p-0">
                     <div class="team-cover">
-                        <img src="assets/images/small/img-9.jpg" alt="" class="img-fluid" />
+                        <img src="assets/images/logo_conect_ia.png" alt="" class="img-fluid" />
                     </div>
                     <div class="p-3">
                         <div class="team-settings">
