--- a/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
+++ b/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
@@ -180,6 +180,10 @@
                                                     data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Follow/{{data.id}}"
                                                     >Evaluar</button>
                                             </div>
+                                            <div class="edit">
+                                                <button class="btn btn-sm btn-primary edit-item-btn" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Task/{{data.id}}"
+                                                    >Revisar</button>
+                                            </div>
                                             <!--<a href="javascript:void(0);" class="link-primary" 
                                             title="Editar"
                                             data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Task/{{data.id}}"
