--- a/src/app/pages/projects/team/team.component.html
+++ b/src/app/pages/projects/team/team.component.html
@@ -624,6 +624,12 @@
 </div>
 <!--end row-->
 
+<div class="row g-0 text-center text-sm-start align-items-center mb-4" style="padding: 0px;position: fixed;bottom: 75px;width: 100%;">
+    <div class="col-sm-5">
+        <div>
+            <p class="mb-sm-0 text-muted">Mostrando <span class="fw-semibold">1</span> de <span class="fw-semibold">10</span> de <span class="fw-semibold text-decoration-underline">{{pagLength}}</span> entradas</p>
+        </div>
+    </div>
 
 <!-- removeItemModal -->
 <ng-template #deleteModel let-modal>
