--- a/src/app/pages/projects/create/compliance/task/task.component.html
+++ b/src/app/pages/projects/create/compliance/task/task.component.html
@@ -72,18 +72,33 @@
                         <table class="table">
                             <thead>
                                 <tr class="bg-light text-muted">
+                                    <th class="sort">Respaldo</th>
                                     <th class="sort" data-sort="nombre">Hallazgo</th>
                                     <th class="sort" data-sort="descripcion">Descripción</th>
+                                    <th class="sort" style="width: 100px;">Acción</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr *ngFor="let data of HallazgosDatas" id="lj_{{data.id}}">
-                                    <td><ngb-highlight [result]="data.nombre"
+                                    <td><img [src]="data.findings.img" (error)="imgError($event)" alt="user img"
+                                        class="users-avatar-shadow avatar mr-3 rounded-circle" height="64" width="64">
+                                    </td>
+                                    <td><ngb-highlight [result]="data.findings.nombre"
                                             [term]="service.searchTerm"></ngb-highlight>
                                     </td>
-                                    <td><ngb-highlight [result]="data.descripcion"
+                                    <td><ngb-highlight [result]="data.findings.descripcion"
                                                     [term]="service.searchTerm">
                                             </ngb-highlight>
+                                    </td>
+                                    
+                                    <td>
+                                        <div class="d-flex gap-2">
+                                            <div class="hstack gap-3 fs-15">
+                                                <a href="javascript:void(0);" class="link-primary" 
+                                                title="Tareas"
+                                                (click)="selectTask(data.findings.id,data.findings.nombre)"><i class="ri-todo-line"></i></a>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                             </tbody>
@@ -116,11 +131,11 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" *ngIf="idHallazgo">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title mb-0">Tareas</h4>
+                <h4 class="card-title mb-0">Tareas - {{nombreHallazgo}}</h4>
             </div><!-- end card header -->
 
             <div class="card-body">
@@ -148,23 +163,26 @@
                         <table class="table">
                             <thead>
                                 <tr class="bg-light text-muted">
-                                    <th class="sort" data-sort="tarea">Tarea</th>
+                                    <th class="sort" data-sort="id">Id</th>
                                     <th class="sort" data-sort="descripcion">Descripcion</th>
                                     <th class="sort" data-sort="responsable">Nombre Responsable</th>
-                                    <th class="sort" data-sort="fecha_plazo">Fecha Plazo</th>
+                                    <th class="sort" data-sort="fecha_inicio">Fecha Inicio</th>
+                                    <th class="sort" data-sort="fecha_termino">Fecha Termino</th>
                                     <th class="sort" style="width: 100px;">Acción</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr *ngFor="let data of TaskDatas" id="lj_{{data.id}}">
-                                    <td><ngb-highlight [result]="data.tarea"
+                                    <td><ngb-highlight [result]="data.id"
                                             [term]="service.searchTerm"></ngb-highlight></td>
                                     <td><ngb-highlight [result]="data.descripcion"
                                             [term]="service.searchTerm"></ngb-highlight></td>
                                     <td><ngb-highlight [result]="data.responsable"
                                         [term]="service.searchTerm"></ngb-highlight></td>
                                     <td>
-                                    <td><ngb-highlight [result]="data.fecha_plazo"
+                                    <td><ngb-highlight [result]="data.fecha_inicio"
+                                            [term]="service.searchTerm"></ngb-highlight></td>
+                                    <td><ngb-highlight [result]="data.fecha_termino"
                                             [term]="service.searchTerm"></ngb-highlight></td>
                                     <td>
                                         <div class="d-flex gap-2">
@@ -236,13 +254,23 @@
             </div>
 
             <div class="mb-3">
-                <label for="user-field" class="form-label">Fecha Plazo</label>
+                <label for="user-field" class="form-label">Fecha Inicio</label>
                     <div class="form-icon right">
-                        <input class="form-control form-control-icon flatpickr-input" type="text" placeholder="Ingresar Fecha Plazo" required
-                        formControlName="fecha_plazo" [ngClass]="{ 'is-invalid': submitted && form['fecha_plazo'].errors }" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
+                        <input class="form-control form-control-icon flatpickr-input" type="text" placeholder="Ingresar Fecha Inicio" required
+                        formControlName="fecha_inicio" [ngClass]="{ 'is-invalid': submitted && form['fecha_inicio'].errors }" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
                         <i class="ri-calendar-todo-fill"></i>
                     </div>
-                <div class="invalid-feedback">Por favor ingresar Fecha plazo.</div>
+                <div class="invalid-feedback">Por favor ingresar Fecha inicio.</div>
+            </div>
+
+            <div class="mb-3">
+                <label for="user-field" class="form-label">Fecha Termino</label>
+                    <div class="form-icon right">
+                        <input class="form-control form-control-icon flatpickr-input" type="text" placeholder="Ingresar Fecha Termino" required
+                        formControlName="fecha_termino" [ngClass]="{ 'is-invalid': submitted && form['fecha_termino'].errors }" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
+                        <i class="ri-calendar-todo-fill"></i>
+                    </div>
+                <div class="invalid-feedback">Por favor ingresar Fecha Termino.</div>
             </div>
 
             <div class="mb-3">
