ajuste roles end point y permisos

--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -665,7 +665,7 @@
                                     class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">{{userData.nombre}}
                                     {{userData.apellido}}</span>
                                 <span
-                                    class="d-none d-xl-block ms-1 fs-12 text-muted user-name-sub-text">{{userData.role}}</span>
+                                    class="d-none d-xl-block ms-1 fs-12 text-muted user-name-sub-text">{{getRol(userData.rol)}}</span><!--userData.role-->
                             </span>
                         </span>
                     </button>
