--- a/src/app/pages/extrapages/profile/profile/profile.component.html
+++ b/src/app/pages/extrapages/profile/profile/profile.component.html
@@ -13,7 +13,7 @@
         <div class="col">
             <div class="p-2">
                 <h3 class="text-white mb-1">{{userData.nombre}} {{userData.apellido}}</h3>
-                <p class="text-white-75">{{userData.role}}</p>
+                <p class="text-white-75">{{getRol(userData.rol)}}</p><!--userData.role-->
                 <div class="hstack text-white-50 gap-1">
                     <div class="me-2"><i
                             class="ri-map-pin-user-line me-1 text-white-75 fs-16 align-middle"></i>{{userData.city}},
