--- a/src/app/pages/extrapages/profile/settings/settings.component.html
+++ b/src/app/pages/extrapages/profile/settings/settings.component.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                     <h5 class="fs-16 mb-1">{{userData.nombre}} {{userData.apellido}}</h5>
-                    <p class="text-muted mb-0">{{userData.role}}</p>
+                    <p class="text-muted mb-0">{{getRol(userData.rol)}}</p><!--userData.role-->
                 </div>
             </div>
         </div><!--end card-->
