--- a/src/app/pages/projects/create/compliance/assess/assess.component.html
+++ b/src/app/pages/projects/create/compliance/assess/assess.component.html
@@ -22,10 +22,10 @@
                     <span></span>
                     </span>
                 </span>
-                <h6 class="card-title">DS<!--{{detail.identificador ? detail.identificador.tipoNorma+' '+detail.identificador.numero : ''}} {{detail.tituloNorma ? detail.tituloNorma : ''}}--></h6>
+                <h6 class="card-title">{{detail.nombre}}</h6>
                 
                 <!--<ng-container *ngFor="let org of detail.organismos">-->
-                    <p class="card-subtitle text-muted mb-0">Ministerio<!--{{org}}--></p>
+                    <p class="card-subtitle text-muted mb-0">{{detail.descripcion}}</p>
                 <!--</ng-container>-->
             </div>
         </div>
@@ -42,7 +42,13 @@
                         <div class="row g-0">
                             <div class="col-md-12">
                                 <div class="card-body">
-                                    <h5 class="card-title mb-0">Artículo 1</h5>  
+                                    <h5 class="card-title mb-0">{{articulo.articulo}}</h5>  
+                                    <p class="card-text mb-2" [style]="articulo.descripcion && articulo.descripcion.length > 450 ? 'min-height: 60px;' : 'min-height: 80px;'">{{ articulo.descripcion && articulo.descripcion.length > 450 ? formatArticle(articulo.descripcion, articulo.articulo) : articulo.descripcion }}</p>
+                                    
+                                    <p class="card-text">
+                                        <small class="text-danger" style="cursor: pointer;" *ngIf="articulo.descripcion && articulo.descripcion.length > 450 && !validatShow(articulo.articulo)" (click)="showText(articulo.articulo)"><b>Ver texto completo</b></small>
+                                        <small class="text-danger" style="cursor: pointer;" *ngIf="articulo.descripcion && articulo.descripcion.length > 450 && validatShow(articulo.articulo)" (click)="hideText(articulo.articulo)"><b>Ocultar texto completo</b></small>
+                                    </p> 
                                 </div>
                             </div>
                         </div>
@@ -59,17 +65,18 @@
             <div class="card-header">
 
                 <div class="col-xxl-12">
-                    <div class="card">
+                    <div class="card border card-border-primary" style="border-radius: 24px !important;">
                         <div class="row g-0">
                             <div class="col-md-12">
-                                <div class="card-body">      
-                                    Fecha de Evaluación
+                                <div class="card-body">
+                                    <h5 class="card-title mb-0">{{tarea.evaluationFinding ? tarea.evaluationFinding.nombre : '' }}
+                                    </h5>  
+                                    <p class="card-text mb-2" [style]="tarea.evaluationFinding && tarea.evaluationFinding.descripcion.length > 450 ? 'min-height: 60px;' : 'min-height: 80px;'">{{ tarea.evaluationFinding && tarea.evaluationFinding.descripcion?.length > 450 ? formatTask(tarea.evaluationFinding?.descripcion, tarea.evaluationFinding?.id) : tarea.evaluationFinding?.descripcion }}</p>
                                     
-                                    <div class="form-icon right">
-                                        <input class="form-control form-control-icon flatpickr-input" type="text" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
-                                        <i class="ri-calendar-todo-fill"></i>
-                                    </div>
-
+                                    <p class="card-text">
+                                        <small class="text-danger" style="cursor: pointer;" *ngIf="tarea.evaluationFinding && tarea.evaluationFinding.descripcion.length > 450 && !validatShow2(tarea.evaluationFinding.id)" (click)="showText2(tarea.evaluationFinding.id)"><b>Ver texto completo</b></small>
+                                        <small class="text-danger" style="cursor: pointer;" *ngIf="tarea.evaluationFinding && tarea.evaluationFinding.descripcion.length > 450 && validatShow2(tarea.evaluationFinding.id)" (click)="hideText2(tarea.evaluationFinding.id)"><b>Ocultar texto completo</b></small>
+                                    </p> 
                                 </div>
                             </div>
                         </div>
@@ -80,6 +87,33 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-header">
+
+                <div class="col-xxl-12">
+                    <div class="card border card-border-primary" style="border-radius: 24px !important;">
+                        <div class="row g-0">
+                            <div class="col-md-12">
+                                <div class="card-body">
+                                    <h5 class="card-title mb-0">Tarea
+                                    </h5>  
+                                    <p class="card-text mb-2" [style]="tarea.descripcion && tarea.descripcion.length > 450 ? 'min-height: 60px;' : 'min-height: 80px;'">{{ tarea.descripcion && tarea.descripcion.length > 450 ? formatTask2(tarea.descripcion, tarea.id) : tarea.descripcion }}</p>
+                                    
+                                    <p class="card-text">
+                                        <small class="text-danger" style="cursor: pointer;" *ngIf="tarea.descripcion && tarea.descripcion.length > 450 && !validatShow3(tarea.id)" (click)="showText3(tarea.id)"><b>Ver texto completo</b></small>
+                                        <small class="text-danger" style="cursor: pointer;" *ngIf="tarea.descripcion && tarea.descripcion.length > 450 && validatShow3(tarea.id)" (click)="hideText3(tarea.id)"><b>Ocultar texto completo</b></small>
+                                    </p> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="row">
     <div class="col-lg-12">
@@ -116,23 +150,6 @@
                                     Comentario
                                     <ckeditor [editor]="Editor" data=""></ckeditor>
                                 </div>
-                                <div class="card-footer">
-                                    <div class="row">
-                                        <div class="col-xxl-9 col-lg-9">
-                                        </div>
-                                        
-                                        <div class="col-xxl-3 col-lg-3">
-                                            <button class="btn btn-sm btn-success edit-item-btn" style="width:100px;margin-left: 10px;"
-                                            >Cumple</button>
-                                        
-                                            <button class="btn btn-sm btn-warning edit-item-btn" style="width:100px;margin-left: 10px;"
-                                            >Parcial</button>
-                                        
-                                            <button class="btn btn-sm btn-danger edit-item-btn" style="width:100px;margin-left: 10px;"
-                                            >No Cumple</button>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -140,6 +157,35 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="row">
+    <div class="col-12">
+        
+        <div class="col-md-3" style="float:left;">
+            <div class="btn-group dropdown" ngbDropdown>
+                <button type="button" class="btn btn-primary" style="min-width:150px;" *ngIf="!status">Sin estado</button>
+                <button type="button" class="btn btn-success" style="min-width:150px;" *ngIf="status == 'CUMPLE'">Cumple</button>
+                <button type="button" class="btn btn-warning" style="min-width:150px;" *ngIf="status == 'CUMPLE PARCIALMENTE'">Parcial</button>
+                <button type="button" class="btn btn-danger" style="min-width:150px;" *ngIf="status == 'NO CUMPLE'">No Cumple</button>
+                <button type="button" class="btn btn-{{!status ? 'primary' : (status == 'CUMPLE' ? 'success' : (status == 'CUMPLE PARCIALMENTE' ? 'warning' : 'danger')) }} dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  ngbDropdownToggle></button>
+                <div class="dropdown-menu" ngbDropdownMenu>
+                    
+                <div class="dropdown-header noti-title">
+                    <h5 class="font-size-13 text-muted text-truncate mn-0">Estado de la Tarea!</h5>
+                </div>
+                <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('CUMPLE')">Cumple</a>
+                <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('CUMPLE PARCIALMENTE')">Parcial</a>
+                <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('NO CUMPLE')">No Cumple</a>
+                </div>
+            </div>
+            </div>
+            
+            <div class="col-md-9" style="float:left;">
+                <button class="btn btn-primary edit-item-btn d-sm-flex align-items-center justify-content-end" style="float:right;"  (click)="editTask()"
+                >Guardar</button>
+            </div>
+        </div>
 </div>
 
 <app-toastsp aria-live="polite" aria-atomic="true"></app-toastsp>
