--- a/src/app/pages/projects/create/compliance/follow/follow.component.html
+++ b/src/app/pages/projects/create/compliance/follow/follow.component.html
@@ -71,38 +71,61 @@
                                 <div class="card-body">      
                                     Fecha de Evaluación
 
+                                    <form [formGroup]="evaluacionForm" class="tablelist-form">
                                     <div class="row">
                                         <div class="col-md-3">
                                             
-                                    <div class="form-icon right">
-                                        <form [formGroup]="evaluacionForm" class="tablelist-form">
-                                        <input class="form-control form-control-icon flatpickr-input" type="text" formControlName="fecha_evaluacion" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
-                                        <i class="ri-calendar-todo-fill"></i>
-                                        </form>
-                                    </div>
-                                    </div>
-                                    <div class="col-md-3">
-
-                                    <div class="btn-group dropdown" ngbDropdown>
-                                        <button type="button" class="btn btn-primary" style="min-width:150px;" *ngIf="!status">Sin estado</button>
-                                        <button type="button" class="btn btn-success" style="min-width:150px;" *ngIf="status == 'Cumple'">Cumple</button>
-                                        <button type="button" class="btn btn-warning" style="min-width:150px;" *ngIf="status == 'Parcial'">Parcial</button>
-                                        <button type="button" class="btn btn-danger" style="min-width:150px;" *ngIf="status == 'No Cumple'">No Cumple</button>
-                                        <button type="button" class="btn btn-{{!status ? 'primary' : (status == 'Cumple' ? 'success' : (status == 'Parcial' ? 'warning' : 'danger')) }} dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  ngbDropdownToggle></button>
-                                        <div class="dropdown-menu" ngbDropdownMenu>
+                                            <div class="form-icon right">
+                                                <input class="form-control form-control-icon flatpickr-input" type="text" formControlName="fecha_evaluacion" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
+                                                <i class="ri-calendar-todo-fill"></i>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-2">
                                             
-                                        <div class="dropdown-header noti-title">
-                                            <h5 class="font-size-13 text-muted text-truncate mn-0">Estado de la evaluación!</h5>
+                                            <div class="form-check form-switch form-check-right form-switch-success">
+                                                    <input class="form-check-input" type="checkbox" formControlName="reportable" role="switch" id="flexSwitchCheckRightDisabled" checked>
+                                                    <label class="form-check-label" for="flexSwitchCheckRightDisabled">Es Reportable</label>
+                                                        
+                                            </div>
                                         </div>
-                                        <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('Cumple')">Cumple</a>
-                                        <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('Parcial')">Parcial</a>
-                                        <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('No Cumple')">No Cumple</a><!--
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Separated link</a>-->
+                                        
+                                        <div class="col-md-2">
+                                            
+                                            <div class="form-check form-switch form-check-right form-switch-success">
+                                                    <input class="form-check-input" type="checkbox" formControlName="monitoreo" role="switch" id="flexSwitchCheckCheckedDisabled" checked>
+                                                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Monitoreo</label>    
+                                            </div>
                                         </div>
-                                    </div>
+                                        
+                                        <div class="col-md-2">
+                                            
+                                            <div class="form-check form-switch form-check-right form-switch-success">
+                                                    <input class="form-check-input" type="checkbox" formControlName="permiso" role="switch" id="flexSwitchCheckCheckedDisabled" checked>
+                                                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Permiso</label>    
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="btn-group dropdown" ngbDropdown>
+                                                <button type="button" class="btn btn-primary" style="min-width:150px;" *ngIf="!status">Sin estado</button>
+                                                <button type="button" class="btn btn-success" style="min-width:150px;" *ngIf="status == 'CUMPLE'">Cumple</button>
+                                                <button type="button" class="btn btn-warning" style="min-width:150px;" *ngIf="status == 'CUMPLE PARCIALMENTE'">Parcial</button>
+                                                <button type="button" class="btn btn-danger" style="min-width:150px;" *ngIf="status == 'NO CUMPLE'">No Cumple</button>
+                                                <button type="button" class="btn btn-{{!status ? 'primary' : (status == 'CUMPLE' ? 'success' : (status == 'CUMPLE PARCIALMENTE' ? 'warning' : 'danger')) }} dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  ngbDropdownToggle></button>
+                                                <div class="dropdown-menu" ngbDropdownMenu>
+                                                    
+                                                <div class="dropdown-header noti-title">
+                                                    <h5 class="font-size-13 text-muted text-truncate mn-0">Estado de la evaluación!</h5>
+                                                </div>
+                                                <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('CUMPLE')">Cumple</a>
+                                                <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('CUMPLE PARCIALMENTE')">Parcial</a>
+                                                <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('NO CUMPLE')">No Cumple</a><!--
+                                                <div class="dropdown-divider"></div>
+                                                <a class="dropdown-item" href="#">Separated link</a>-->
+                                                </div>
+                                            </div>
                                     </div>
                                 </div>
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -150,7 +173,7 @@
     </div>
 </div>-->
 
-<div class="row" *ngIf="status == 'No Cumple' || status == 'Parcial'">
+<div class="row" *ngIf="status == 'NO CUMPLE' || status == 'CUMPLE PARCIALMENTE'">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
@@ -254,7 +277,7 @@
     </div>
 </div>
 
-<div class="row" *ngIf="status == 'Cumple'">
+<div class="row" *ngIf="status == 'CUMPLE'">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
@@ -276,7 +299,7 @@
     </div>
 </div>
 
-<div class="row" *ngIf="status == 'Cumple'">
+<div class="row" *ngIf="status == 'CUMPLE'">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
