--- a/src/app/pages/projects/create/compliance/assess/assess.component.html
+++ b/src/app/pages/projects/create/compliance/assess/assess.component.html
@@ -137,7 +137,7 @@
     </div>
 </div>
 
-<div class="row">
+<!--<div class="row">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
@@ -157,7 +157,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
 <div class="row">
     <div class="col-12">
